fix spacing under some elements

--- a/themes/basic/static/css/style.css
+++ b/themes/basic/static/css/style.css
@@ -113,8 +113,17 @@ ul.topnav li a {
 }
 
 h1 {
+	margin-top: 1em;
 	font-size:     130%;
 	margin-bottom: 0.5em;
+}
+
+ul {
+	margin-bottom: 1em;
+}
+
+div.highlight {
+	margin-bottom: 1em;
 }
 
 p, h2 {
@@ -126,6 +135,7 @@ time {
 }
 
 h2 {
+	top-bottom: 1em;
 	font-size: 120%;
 }
 
